--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -71,7 +71,6 @@ jobs:
           echo "✅ Coverage ${COVERAGE}% meets threshold ${THRESHOLD}%"
 
       - name: Lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          working-directory: ${{ matrix.module }}
-          version: latest
+        run: |
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+          golangci-lint run ./...
