Recommendation refactor(ci): move gofmt and goimports to formatters section in config
Alternative 1
chore(ci): update .golangci.yml to relocate formatting linters

Alternative 2
refactor(lint): reorganize gofmt and goimports under formatters config

Split plan
<none>

Validation
- type valid: yes
- scope clear: yes
- subject <= 72: yes
- breaking format correct: n/a
- trailers complete: no

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,8 +11,6 @@ linters:
     - unused          # unused code
 
     # Style & maintainability
-    - gofmt           # formatting
-    - goimports       # import ordering
     - misspell        # spelling mistakes in comments/strings
     - unconvert       # unnecessary type conversions
     - unparam         # unused function parameters
@@ -28,6 +26,11 @@ linters:
     # Tests
     - thelper         # test helpers without t.Helper()
     - tparallel       # missing t.Parallel() in tests
+
+formatters:
+  enable:
+    - gofmt           # formatting
+    - goimports       # import ordering
 
 linters-settings:
   gofmt:
