Recommendation chore(lint): update .golangci.yml to simplify enabled linters
Alternative 1
refactor(lint): streamline enabled linters in .golangci.yml

Alternative 2
chore(ci): adjust .golangci.yml to reflect updated linter groupings

Split plan
<none>

Validation
- type valid: yes
- scope clear: yes
- subject <= 72: yes
- breaking format correct: n/a
- trailers complete: no

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,11 +4,9 @@ linters:
   enable:
     # Correctness
     - errcheck        # unchecked errors
-    - gosimple        # simplification suggestions
     - govet           # suspicious constructs
     - ineffassign     # unused assignments
-    - staticcheck     # static analysis
-    - unused          # unused code
+    - staticcheck     # static analysis (includes gosimple, unused)
 
     # Style & maintainability
     - misspell        # spelling mistakes in comments/strings
