feat(release-please): add tracer package to release automation config
PR-AREA: deps
PR-SUMMARY: added tracer package to release-please configuration
REL-NOTE: tracer package now included in automated releases
REL-IMPACT: minor

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -6,6 +6,11 @@
       "release-type": "go",
       "package-name": "logger",
       "changelog-path": "CHANGELOG.md"
+    },
+    "tracer": {
+      "release-type": "go",
+      "package-name": "tracer",
+      "changelog-path": "CHANGELOG.md"
     }
   },
   "pull-request-title-pattern": "chore: release${component} ${version}",
