feat(ci): update workflows to support tracer module and go.work
PR-AREA: ci
PR-SUMMARY: added tracer module to workflows and migrated to go.work file
REL-NOTE: workflows now include tracer module and use go.work for Go setup
REL-IMPACT: minor

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: logger/go.mod
+          go-version-file: go.work
 
       - name: Build release archives
         run: |
