--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         module:
           - logger
+          - tracer
 
     steps:
       - name: Checkout
@@ -52,7 +53,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: logger/go.mod
+          go-version-file: go.work
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
