feat(makefile): enhance tooling setup and update observability docs PR-AREA: ci PR-SUMMARY: streamline makefile scripts, improve docs and tooling setup REL-NOTE: updates include improvements to linter, docs generator, and new observability functionality REL-IMPACT: minor

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -11,6 +11,11 @@
       "release-type": "go",
       "package-name": "tracer",
       "changelog-path": "CHANGELOG.md"
+    },
+    "observability": {
+      "release-type": "go",
+      "package-name": "observability",
+      "changelog-path": "CHANGELOG.md"
     }
   },
   "pull-request-title-pattern": "chore: release${component} ${version}",
