feat(metrics): add Prometheus-based dual endpoint metrics module
PR-AREA: metrics
PR-SUMMARY: Introduce metrics module with dual HTTP endpoints for system and app
REL-NOTE: Added dual endpoint support for metrics with Prometheus integration
REL-IMPACT: minor

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -16,6 +16,11 @@
       "release-type": "go",
       "package-name": "observability",
       "changelog-path": "CHANGELOG.md"
+    },
+    "metrics": {
+      "release-type": "go",
+      "package-name": "metrics",
+      "changelog-path": "CHANGELOG.md"
     }
   },
   "pull-request-title-pattern": "chore: release${component} ${version}",
