--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -26,6 +26,7 @@ jobs:
           - logger
           - tracer
           - observability
+          - metrics
 
     steps:
       - name: Checkout
