feat(kafka): add Kafka client with serialization, observability, and test support PR-AREA: api PR-SUMMARY: introduced Kafka client with serialization and observability capabilities REL-NOTE: added Kafka client with JSON/Protobuf serialization and test utilities REL-IMPACT: minor

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -21,6 +21,11 @@
       "release-type": "go",
       "package-name": "metrics",
       "changelog-path": "CHANGELOG.md"
+    },
+    "kafka": {
+      "release-type": "go",
+      "package-name": "kafka",
+      "changelog-path": "CHANGELOG.md"
     }
   },
   "pull-request-title-pattern": "chore: release${component} ${version}",
