feat(makefile): enable parallel test execution and detailed test summaries
PR-AREA: build
PR-SUMMARY: improve test execution by adding parallelism and detailed summaries
REL-NOTE: enable faster and more informative test runs with parallel execution
REL-IMPACT: minor

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -26,6 +26,16 @@
       "release-type": "go",
       "package-name": "kafka",
       "changelog-path": "CHANGELOG.md"
+    },
+    "mariadb": {
+      "release-type": "go",
+      "package-name": "mariadb",
+      "changelog-path": "CHANGELOG.md"
+    },
+    "postgres": {
+      "release-type": "go",
+      "package-name": "postgres",
+      "changelog-path": "CHANGELOG.md"
     }
   },
   "pull-request-title-pattern": "chore: release${component} ${version}",
