--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -31,8 +31,14 @@ jobs:
           - observability
           - metrics
           - kafka
+          - mariadb
+          - postgres
         include:
           - module: kafka
+            test-env: TESTCONTAINERS_RYUK_DISABLED=true
+          - module: mariadb
+            test-env: TESTCONTAINERS_RYUK_DISABLED=true
+          - module: postgres
             test-env: TESTCONTAINERS_RYUK_DISABLED=true
 
     defaults:
