--- a/.github/.release-please-manifest.json
+++ b/.github/.release-please-manifest.json
@@ -3,5 +3,7 @@
   "tracer": "1.2.0",
   "observability": "1.2.0",
   "metrics": "1.1.0",
-  "kafka": "1.1.0"
+  "kafka": "1.1.0",
+  "mariadb": "0.1.0",
+  "postgres": "0.1.0"
 }
