feat(schema_registry): add support for Avro/Protobuf/JSON serializers
PR-AREA: api
PR-SUMMARY: introduce serializers/deserializers for Avro, Protobuf, and JSON with Confluent Schema Registry integration
REL-NOTE: added support for Avro, Protobuf, and JSON Schema serialization/deserialization
REL-IMPACT: minor

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -41,6 +41,11 @@
       "release-type": "go",
       "package-name": "postgres",
       "changelog-path": "CHANGELOG.md"
+    },
+    "schema_registry": {
+      "release-type": "go",
+      "package-name": "schema_registry",
+      "changelog-path": "CHANGELOG.md"
     }
   },
   "pull-request-title-pattern": "chore: release${component} ${version}",
